# pytest-describe

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
pytest_describe/: __init__.py  plugin.py  shared.py
test/: conftest.py  test_class.py  test_collect.py  test_custom_prefix.py  test_fixture_injection.py  test_fixtures.py  test_foo.py  test_marks.py  test_output.py  test_prefix.py  test_shared.py  test_simple.py  test_simple_execution.py  util.py
