[metadata]
name = pytest-describe
version = attr: pytest_describe.__version__
description = Describe-style plugin for pytest
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pytest-dev/pytest-describe
author = Robin Pedersen
author_email = robinpeder@gmail.com
maintainer = Christoph Zwerschke
maintainer_email = cito@online.de
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = test, unittest, plugin, describe
project_urls =
    Source=https://github.com/pytest-dev/pytest-describe
    Tracker=https://github.com/pytest-dev/pytest-describe/issues

[options]
python_requires = >=3.7
packages =
    pytest_describe
install_requires =
    pytest>=4.6,<8

[options.entry_points]
pytest11 =
    pytest-describe = pytest_describe.plugin
